--- a/trunk/Design/I-FFD/I-FFD-PSpiceFiles/S-NAND-2/bias/bias.out.1
+++ b/trunk/Design/I-FFD/I-FFD-PSpiceFiles/S-NAND-2/bias/bias.out.1
@@ -1,7 +1,7 @@
-
-**** 10/08/09 21:15:54 ******* PSpice 10.5.0 (Jan 2005) ******* ID# 0 ********
 
- ** Profile: "S-NAND-2-bias"  [ D:\Documents\TESIS\TRUNK\Design\I-FFD\I-FFD-PSpiceFiles\S-NAND-2\bias.sim ] 
+**** 10/08/09 21:25:32 ******* PSpice 10.5.0 (Jan 2005) ******* ID# 0 ********
+
+ ** Profile: "S-NAND-2-bias"  [ D:\Documents\TESIS\TRUNK\Design\I-FFD\i-ffd-pspicefiles\s-nand-2\bias.sim ] 
 
 
  ****     CIRCUIT DESCRIPTION
