- Arregle los archivos hieralchical de los flash q nos estaban dando error. - Hice el TESTEO y OPTIMIZACION del Flash de 4 bits hasta dejarlo andando en 2 MHz con tensiones de 3.3 V y senal de referencia de 1 V (unos 90 mV de resolucion). - Subi los PDF de todas las simulaciones y optimizaciones del FLASH de 4 bits. - Subo la documentacion hasta el momento del de 4 bits y la tabla de Excel del de 6 bits.

--- a/Design/I-FLASH-01/OrCAD/I-FLASH-4BIT/I-FLASH-4BIT-PSpiceFiles/FLASH/bias/bias.out.1
+++ b/Design/I-FLASH-01/OrCAD/I-FLASH-4BIT/I-FLASH-4BIT-PSpiceFiles/FLASH/bias/bias.out.1
@@ -1,7 +1,7 @@
 
-**** 11/23/09 19:03:07 ******* PSpice 10.5.0 (Jan 2005) ******* ID# 0 ********
+**** 12/03/09 16:04:14 ******* PSpice 10.5.0 (Jan 2005) ******* ID# 0 ********
 
- ** Profile: "FLASH-bias"  [ D:\Documents\TESIS\TRUNK\Design\I-FLASH-01\OrCAD\I-FLASH-4BIT\I-FLASH-4BIT-PSpiceFiles\FLASH\bias.sim ] 
+ ** Profile: "FLASH-bias"  [ D:\Documents\TESIS\TRUNK\Design\I-FLASH-01\OrCAD\I-FLASH-4BIT\i-flash-4bit-pspicefiles\flash\bias.sim ] 
 
 
  ****     CIRCUIT DESCRIPTION
@@ -30,7 +30,7 @@
 **** INCLUDING FLASH.net ****
 * source I-FLASH-4BIT
 V_Va         N14031 0  
-+SIN 0 1.2 3k 0 0 0
++SIN 0 2.3 2.2k 0 0 0
 C_FLASH_FFD11_C3         0 FLASH_FFD11_Y  10p  
 M_FLASH_FFD11_NAND_M1         FLASH_FFD11_N00589 FLASH_FFD11_N00861
 +  FLASH_FFD11_NAND_N00209 FLASH_FFD11_NAND_N00209 CMOSN  
@@ -257,7 +257,7 @@ M_FLASH_C7_M7         FLASH_N01410 N03836 0 0 CMOSN
 M_FLASH_C7_M1         FLASH_C7_N27085 N14031 FLASH_C7_N27149 0 CMOSN  
 + L=.2u  
 + W=.4u         
-M_FLASH_C7_M2         FLASH_C7_N26867 N00303 FLASH_C7_N27149 0 CMOSN  
+M_FLASH_C7_M2         FLASH_C7_N26867 C7 FLASH_C7_N27149 0 CMOSN  
 + L=.2u  
 + W=.4u         
 M_FLASH_C7_M3         FLASH_C7_N27085 FLASH_C7_N27085 N01357 N01357 CMOSP  
@@ -384,7 +384,7 @@ M_FLASH_C1_M7         FLASH_N03795 N03836 0 0 CMOSN
 M_FLASH_C1_M1         FLASH_C1_N27085 N14031 FLASH_C1_N27149 0 CMOSN  
 + L=.2u  
 + W=.4u         
-M_FLASH_C1_M2         FLASH_C1_N26867 N00453 FLASH_C1_N27149 0 CMOSN  
+M_FLASH_C1_M2         FLASH_C1_N26867 C1 FLASH_C1_N27149 0 CMOSN  
 + L=.2u  
 + W=.4u         
 M_FLASH_C1_M3         FLASH_C1_N27085 FLASH_C1_N27085 N01357 N01357 CMOSP  
@@ -513,7 +513,7 @@ M_FLASH_C9_M7         FLASH_N09748 N03836 0 0 CMOSN
 M_FLASH_C9_M1         FLASH_C9_N27085 N14031 FLASH_C9_N27149 0 CMOSN  
 + L=.2u  
 + W=.4u         
-M_FLASH_C9_M2         FLASH_C9_N26867 N00269 FLASH_C9_N27149 0 CMOSN  
+M_FLASH_C9_M2         FLASH_C9_N26867 C9 FLASH_C9_N27149 0 CMOSN  
 + L=.2u  
 + W=.4u         
 M_FLASH_C9_M3         FLASH_C9_N27085 FLASH_C9_N27085 N01357 N01357 CMOSP  
@@ -637,7 +637,7 @@ M_FLASH_C8_M7         FLASH_N01400 N03836 0 0 CMOSN
 M_FLASH_C8_M1         FLASH_C8_N27085 N14031 FLASH_C8_N27149 0 CMOSN  
 + L=.2u  
 + W=.4u         
-M_FLASH_C8_M2         FLASH_C8_N26867 N00285 FLASH_C8_N27149 0 CMOSN  
+M_FLASH_C8_M2         FLASH_C8_N26867 C8 FLASH_C8_N27149 0 CMOSN  
 + L=.2u  
 + W=.4u         
 M_FLASH_C8_M3         FLASH_C8_N27085 FLASH_C8_N27085 N01357 N01357 CMOSP  
@@ -764,7 +764,7 @@ M_FLASH_C10_M7         FLASH_N09532 N03836 0 0 CMOSN
 M_FLASH_C10_M1         FLASH_C10_N27085 N14031 FLASH_C10_N27149 0 CMOSN  
 + L=.2u  
 + W=.4u         
-M_FLASH_C10_M2         FLASH_C10_N26867 N00255 FLASH_C10_N27149 0 CMOSN  
+M_FLASH_C10_M2         FLASH_C10_N26867 C10 FLASH_C10_N27149 0 CMOSN  
 + L=.2u  
 + W=.4u         
 M_FLASH_C10_M3         FLASH_C10_N27085 FLASH_C10_N27085 N01357 N01357 CMOSP  
@@ -786,7 +786,7 @@ M_FLASH_C2_M7         FLASH_N01460 N03836 0 0 CMOSN
 M_FLASH_C2_M1         FLASH_C2_N27085 N14031 FLASH_C2_N27149 0 CMOSN  
 + L=.2u  
 + W=.4u         
-M_FLASH_C2_M2         FLASH_C2_N26867 N00423 FLASH_C2_N27149 0 CMOSN  
+M_FLASH_C2_M2         FLASH_C2_N26867 C2 FLASH_C2_N27149 0 CMOSN  
 + L=.2u  
 + W=.4u         
 M_FLASH_C2_M3         FLASH_C2_N27085 FLASH_C2_N27085 N01357 N01357 CMOSP  
@@ -915,7 +915,7 @@ M_FLASH_C11_M7         FLASH_N09528 N03836 0 0 CMOSN
 M_FLASH_C11_M1         FLASH_C11_N27085 N14031 FLASH_C11_N27149 0 CMOSN  
 + L=.2u  
 + W=.4u         
-M_FLASH_C11_M2         FLASH_C11_N26867 N00243 FLASH_C11_N27149 0 CMOSN  
+M_FLASH_C11_M2         FLASH_C11_N26867 C11 FLASH_C11_N27149 0 CMOSN  
 + L=.2u  
 + W=.4u         
 M_FLASH_C11_M3         FLASH_C11_N27085 FLASH_C11_N27085 N01357 N01357 CMOSP  
@@ -1039,7 +1039,7 @@ M_FLASH_C12_M7         FLASH_N09726 N03836 0 0 CMOSN
 M_FLASH_C12_M1         FLASH_C12_N27085 N14031 FLASH_C12_N27149 0 CMOSN  
 + L=.2u  
 + W=.4u         
-M_FLASH_C12_M2         FLASH_C12_N26867 N00233 FLASH_C12_N27149 0 CMOSN  
+M_FLASH_C12_M2         FLASH_C12_N26867 C12 FLASH_C12_N27149 0 CMOSN  
 + L=.2u  
 + W=.4u         
 M_FLASH_C12_M3         FLASH_C12_N27085 FLASH_C12_N27085 N01357 N01357 CMOSP  
@@ -1060,7 +1060,7 @@ M_FLASH_C3_M7         FLASH_N01450 N03836 0 0 CMOSN
 M_FLASH_C3_M1         FLASH_C3_N27085 N14031 FLASH_C3_N27149 0 CMOSN  
 + L=.2u  
 + W=.4u         
-M_FLASH_C3_M2         FLASH_C3_N26867 N00395 FLASH_C3_N27149 0 CMOSN  
+M_FLASH_C3_M2         FLASH_C3_N26867 C3 FLASH_C3_N27149 0 CMOSN  
 + L=.2u  
 + W=.4u         
 M_FLASH_C3_M3         FLASH_C3_N27085 FLASH_C3_N27085 N01357 N01357 CMOSP  
@@ -1081,7 +1081,7 @@ M_FLASH_C13_M7         FLASH_N09782 N03836 0 0 CMOSN
 M_FLASH_C13_M1         FLASH_C13_N27085 N14031 FLASH_C13_N27149 0 CMOSN  
 + L=.2u  
 + W=.4u         
-M_FLASH_C13_M2         FLASH_C13_N26867 N00225 FLASH_C13_N27149 0 CMOSN  
+M_FLASH_C13_M2         FLASH_C13_N26867 C13 FLASH_C13_N27149 0 CMOSN  
 + L=.2u  
 + W=.4u         
 M_FLASH_C13_M3         FLASH_C13_N27085 FLASH_C13_N27085 N01357 N01357 CMOSP  
@@ -1308,7 +1308,7 @@ M_FLASH_C14_M7         FLASH_N09524 N03836 0 0 CMOSN
 M_FLASH_C14_M1         FLASH_C14_N27085 N14031 FLASH_C14_N27149 0 CMOSN  
 + L=.2u  
 + W=.4u         
-M_FLASH_C14_M2         FLASH_C14_N26867 N00219 FLASH_C14_N27149 0 CMOSN  
+M_FLASH_C14_M2         FLASH_C14_N26867 C14 FLASH_C14_N27149 0 CMOSN  
 + L=.2u  
 + W=.4u         
 M_FLASH_C14_M3         FLASH_C14_N27085 FLASH_C14_N27085 N01357 N01357 CMOSP  
@@ -1329,7 +1329,7 @@ M_FLASH_C4_M7         FLASH_N03459 N03836 0 0 CMOSN
 M_FLASH_C4_M1         FLASH_C4_N27085 N14031 FLASH_C4_N27149 0 CMOSN  
 + L=.2u  
 + W=.4u         
-M_FLASH_C4_M2         FLASH_C4_N26867 N00369 FLASH_C4_N27149 0 CMOSN  
+M_FLASH_C4_M2         FLASH_C4_N26867 C4 FLASH_C4_N27149 0 CMOSN  
 + L=.2u  
 + W=.4u         
 M_FLASH_C4_M3         FLASH_C4_N27085 FLASH_C4_N27085 N01357 N01357 CMOSP  
@@ -1350,7 +1350,7 @@ M_FLASH_C15_M7         FLASH_N09520 N03836 0 0 CMOSN
 M_FLASH_C15_M1         FLASH_C15_N27085 N14031 FLASH_C15_N27149 0 CMOSN  
 + L=.2u  
 + W=.4u         
-M_FLASH_C15_M2         FLASH_C15_N26867 N00215 FLASH_C15_N27149 0 CMOSN  
+M_FLASH_C15_M2         FLASH_C15_N26867 C15 FLASH_C15_N27149 0 CMOSN  
 + L=.2u  
 + W=.4u         
 M_FLASH_C15_M3         FLASH_C15_N27085 FLASH_C15_N27085 N01357 N01357 CMOSP  
@@ -1582,7 +1582,7 @@ M_FLASH_C5_M7         FLASH_N05296 N03836 0 0 CMOSN
 M_FLASH_C5_M1         FLASH_C5_N27085 N14031 FLASH_C5_N27149 0 CMOSN  
 + L=.2u  
 + W=.4u         
-M_FLASH_C5_M2         FLASH_C5_N26867 N00345 FLASH_C5_N27149 0 CMOSN  
+M_FLASH_C5_M2         FLASH_C5_N26867 C5 FLASH_C5_N27149 0 CMOSN  
 + L=.2u  
 + W=.4u         
 M_FLASH_C5_M3         FLASH_C5_N27085 FLASH_C5_N27085 N01357 N01357 CMOSP  
@@ -2114,7 +2114,7 @@ M_FLASH_C6_M7         FLASH_N01420 N03836 0 0 CMOSN
 M_FLASH_C6_M1         FLASH_C6_N27085 N14031 FLASH_C6_N27149 0 CMOSN  
 + L=.2u  
 + W=.4u         
-M_FLASH_C6_M2         FLASH_C6_N26867 N00323 FLASH_C6_N27149 0 CMOSN  
+M_FLASH_C6_M2         FLASH_C6_N26867 C6 FLASH_C6_N27149 0 CMOSN  
 + L=.2u  
 + W=.4u         
 M_FLASH_C6_M3         FLASH_C6_N27085 FLASH_C6_N27085 N01357 N01357 CMOSP  
@@ -2226,32 +2226,32 @@ M_FLASH_FFD10_NAND4_M4         FLASH_-Q10 FLASH_FFD10_Y N01357 N01357 CMOSP
 + W=.2u         
 R_FLASH_FFD10_NAND4_R1         FLASH_Q10 0  10Meg  
 R_FLASH_FFD10_NAND4_R2         FLASH_FFD10_Y 0  10Meg  
-V_Vo         N14439 0 1.2
+V_Vo         N14439 0 2.2
 R_R1         MSB N01357  100k  
 R_R2         3SB N01357  100k  
 V_Clock         N03388 0  
-+PULSE 0 3.3 4.9u 0.1u 0.1u 4.9u 10u
++PULSE 0 3 4.9u 0.1u 0.1u 4.9u 10u
 V_Vbias         N03836 0 .3
 R_R3         2SB N01357  100k  
-R_LEADER_R15         N00453 N00423  10k  
-R_LEADER_R2         N00225 N00219  10k  
-R_LEADER_R16         LEADER_N04254 N00453  5k  
-R_LEADER_R3         N00233 N00225  10k  
-R_LEADER_R4         N00243 N00233  10k  
-R_LEADER_R8         N00219 N00215  10k  
+R_LEADER_R15         C1 C2  10k  
+R_LEADER_R2         C13 C14  10k  
+R_LEADER_R16         LEADER_N04254 C1  5k  
+R_LEADER_R3         C12 C13  10k  
+R_LEADER_R4         C11 C12  10k  
+R_LEADER_R8         C14 C15  10k  
 V_LEADER_Vq         LEADER_N04254 0 .2
-R_LEADER_R5         N00255 N00243  10k  
-R_LEADER_R6         N00269 N00255  10k  
-R_LEADER_R7         N00285 N00269  10k  
-R_LEADER_R9         N00303 N00285  10k  
-R_LEADER_R10         N00323 N00303  10k  
-R_LEADER_R11         N00345 N00323  10k  
-R_LEADER_R12         N00369 N00345  10k  
-R_LEADER_R13         N00395 N00369  10k  
-R_LEADER_R14         N00423 N00395  10k  
-R_LEADER_R1         N00215 N14439  5k  
+R_LEADER_R5         C10 C11  10k  
+R_LEADER_R6         C9 C10  10k  
+R_LEADER_R7         C8 C9  10k  
+R_LEADER_R9         C7 C8  10k  
+R_LEADER_R10         C6 C7  10k  
+R_LEADER_R11         C5 C6  10k  
+R_LEADER_R12         C4 C5  10k  
+R_LEADER_R13         C3 C4  10k  
+R_LEADER_R14         C2 C3  10k  
+R_LEADER_R1         C15 N14439  5k  
 R_R4         LSB N01357  100k  
-V_VDD         N01357 0 3.3
+V_VDD         N01357 0 5
 
 **** RESUMING bias.cir ****
 .END
@@ -2268,9 +2268,9 @@ WARNING -- Mosfet M_FLASH_C7_M4, model CMOSP: Pd = 0 is less than W
 WARNING -- Mosfet M_FLASH_C7_M4, model CMOSP: Ps = 0 is less than W
 WARNING -- Mosfet M_FLASH_C7_M6, model CMOSP: Pd = 0 is less than W
 WARNING -- Mosfet M_FLASH_C7_M6, model CMOSP: Ps = 0 is less than W
-**** 11/23/09 19:03:07 ******* PSpice 10.5.0 (Jan 2005) ******* ID# 0 ********
+**** 12/03/09 16:04:14 ******* PSpice 10.5.0 (Jan 2005) ******* ID# 0 ********
 
- ** Profile: "FLASH-bias"  [ D:\Documents\TESIS\TRUNK\Design\I-FLASH-01\OrCAD\I-FLASH-4BIT\I-FLASH-4BIT-PSpiceFiles\FLASH\bias.sim ] 
+ ** Profile: "FLASH-bias"  [ D:\Documents\TESIS\TRUNK\Design\I-FLASH-01\OrCAD\I-FLASH-4BIT\i-flash-4bit-pspicefiles\flash\bias.sim ] 
 
 
  ****     MOSFET MODEL PARAMETERS
@@ -2402,333 +2402,334 @@ ERROR -- Convergence problem in bias point calculation
  NODE   VOLTAGE     NODE   VOLTAGE     NODE   VOLTAGE     NODE   VOLTAGE
 
 
-(  2SB) 33.00E-06  (  3SB) 32.99E-06  (  LSB)  -13.9670  (  MSB) 32.35E-06      
+(   C1) 2.667E-06  (   C2) 4.000E-06  (   C3) 5.333E-06  (   C4) 6.667E-06      
 
-(N00215) 11.67E-06 (N00219) 11.00E-06 (N00225) 10.33E-06 (N00233) 9.667E-06     
+(   C5) 8.000E-06  (   C6) 9.333E-06  (   C7) 10.67E-06  (   C8) 12.00E-06      
 
-(N00243) 9.000E-06 (N00255) 8.333E-06 (N00269) 7.667E-06 (N00285) 7.000E-06     
+(   C9) 13.33E-06  (  2SB) 49.99E-06  (  3SB) 49.99E-06  (  C10) 14.67E-06      
 
-(N00303) 6.333E-06 (N00323) 5.667E-06 (N00345) 5.000E-06 (N00369) 4.333E-06     
+(  C11) 16.00E-06  (  C12) 17.33E-06  (  C13) 18.67E-06  (  C14) 20.00E-06      
 
-(N00395) 3.667E-06 (N00423) 3.000E-06 (N00453) 2.333E-06 (N01357) 33.00E-06     
+(  C15) 21.33E-06  (  LSB)  -37.5550  (  MSB) 49.01E-06  (N01357) 50.00E-06     
 
-(N03388)    0.0000 (N03836) 3.000E-06 (N14031)    0.0000 (N14439) 12.00E-06     
+(N03388)    0.0000 (N03836) 3.000E-06 (N14031)    0.0000 (N14439) 22.00E-06     
 
-(FLASH_Q1) 77.17E-09                  (FLASH_Q2) 77.17E-09                      
+(FLASH_Q1) 117.0E-09                  (FLASH_Q2) 117.0E-09                      
 
-(FLASH_Q3) 77.17E-09                  (FLASH_Q4) 77.17E-09                      
+(FLASH_Q3) 117.0E-09                  (FLASH_Q4) 117.0E-09                      
 
-(FLASH_Q5) 77.17E-09                  (FLASH_Q6) 77.17E-09                      
+(FLASH_Q5) 117.0E-09                  (FLASH_Q6) 117.0E-09                      
 
-(FLASH_Q7) 77.17E-09                  (FLASH_Q8) 32.35E-06                      
+(FLASH_Q7) 117.0E-09                  (FLASH_Q8) 49.01E-06                      
 
-(FLASH_Q9) 77.17E-09                  (FLASH_-Q2) 77.17E-09                     
+(FLASH_Q9) 117.0E-09                  (FLASH_-Q2) 117.0E-09                     
 
-(FLASH_-Q4) 51.70E-09                 (FLASH_-Q6) 77.17E-09                     
+(FLASH_-Q4) 78.35E-09                 (FLASH_-Q6) 117.0E-09                     
 
-(FLASH_-Q8) 38.85E-09                 (FLASH_Q10) 77.17E-09                     
+(FLASH_-Q8) 58.87E-09                 (FLASH_Q10) 117.0E-09                     
 
-(FLASH_Q11) 77.17E-09                 (FLASH_Q12) 77.17E-09                     
+(FLASH_Q11) 117.0E-09                 (FLASH_Q12) 117.0E-09                     
 
-(FLASH_Q13) 77.17E-09                 (FLASH_Q14) 77.17E-09                     
+(FLASH_Q13) 117.0E-09                 (FLASH_Q14) 117.0E-09                     
 
-(FLASH_Q15) 77.17E-09                 (FLASH_-Q10) 77.17E-09                    
+(FLASH_Q15) 117.0E-09                 (FLASH_-Q10) 117.0E-09                    
 
-(FLASH_-Q12) 51.70E-09                (FLASH_-Q14) 77.17E-09                    
+(FLASH_-Q12) 78.35E-09                (FLASH_-Q14) 117.0E-09                    
 
-(FLASH_FFD1_X) 77.17E-09              (FLASH_FFD1_Y) 116.1E-09                  
+(FLASH_FFD1_X) 117.0E-09              (FLASH_FFD1_Y) 176.0E-09                  
 
-(FLASH_FFD2_X) 77.17E-09              (FLASH_FFD2_Y) 116.1E-09                  
+(FLASH_FFD2_X) 117.0E-09              (FLASH_FFD2_Y) 176.0E-09                  
 
-(FLASH_FFD3_X) 77.17E-09              (FLASH_FFD3_Y) 116.1E-09                  
+(FLASH_FFD3_X) 117.0E-09              (FLASH_FFD3_Y) 176.0E-09                  
 
-(FLASH_FFD4_X) 77.17E-09              (FLASH_FFD4_Y) 116.1E-09                  
+(FLASH_FFD4_X) 117.0E-09              (FLASH_FFD4_Y) 176.0E-09                  
 
-(FLASH_FFD5_X) 77.17E-09              (FLASH_FFD5_Y) 116.1E-09                  
+(FLASH_FFD5_X) 117.0E-09              (FLASH_FFD5_Y) 176.0E-09                  
 
-(FLASH_FFD6_X) 77.17E-09              (FLASH_FFD6_Y) 116.1E-09                  
+(FLASH_FFD6_X) 117.0E-09              (FLASH_FFD6_Y) 176.0E-09                  
 
-(FLASH_FFD7_X) 77.17E-09              (FLASH_FFD7_Y) 116.1E-09                  
+(FLASH_FFD7_X) 117.0E-09              (FLASH_FFD7_Y) 176.0E-09                  
 
-(FLASH_FFD8_X) 77.17E-09              (FLASH_FFD8_Y) 116.1E-09                  
+(FLASH_FFD8_X) 117.0E-09              (FLASH_FFD8_Y) 176.0E-09                  
 
-(FLASH_FFD9_X) 77.17E-09              (FLASH_FFD9_Y) 116.1E-09                  
+(FLASH_FFD9_X) 117.0E-09              (FLASH_FFD9_Y) 176.0E-09                  
 
-(FLASH_N01400) 87.36E-09              (FLASH_N01410) 87.36E-09                  
+(FLASH_N01400) 132.4E-09              (FLASH_N01410) 132.4E-09                  
 
-(FLASH_N01420) 87.36E-09              (FLASH_N01450) 87.36E-09                  
+(FLASH_N01420) 132.4E-09              (FLASH_N01450) 132.4E-09                  
 
-(FLASH_N01460) 87.36E-09              (FLASH_N03459) 87.36E-09                  
+(FLASH_N01460) 132.4E-09              (FLASH_N03459) 132.4E-09                  
 
-(FLASH_N03795) 87.36E-09              (FLASH_N05296) 87.36E-09                  
+(FLASH_N03795) 132.4E-09              (FLASH_N05296) 132.4E-09                  
 
-(FLASH_N09520) 87.36E-09              (FLASH_N09524) 87.36E-09                  
+(FLASH_N09520) 132.4E-09              (FLASH_N09524) 132.4E-09                  
 
-(FLASH_N09528) 87.36E-09              (FLASH_N09532) 87.36E-09                  
+(FLASH_N09528) 132.4E-09              (FLASH_N09532) 132.4E-09                  
 
-(FLASH_N09726) 87.36E-09              (FLASH_N09748) 87.36E-09                  
+(FLASH_N09726) 132.4E-09              (FLASH_N09748) 132.4E-09                  
 
-(FLASH_N09782) 87.36E-09              (FLASH_FFD10_X) 77.17E-09                 
+(FLASH_N09782) 132.4E-09              (FLASH_FFD10_X) 117.0E-09                 
 
-(FLASH_FFD10_Y) 116.1E-09             (FLASH_FFD11_X) 77.17E-09                 
+(FLASH_FFD10_Y) 176.0E-09             (FLASH_FFD11_X) 117.0E-09                 
 
-(FLASH_FFD11_Y) 116.1E-09             (FLASH_FFD12_X) 77.17E-09                 
+(FLASH_FFD11_Y) 176.0E-09             (FLASH_FFD12_X) 117.0E-09                 
 
-(FLASH_FFD12_Y) 116.1E-09             (FLASH_FFD13_X) 77.17E-09                 
+(FLASH_FFD12_Y) 176.0E-09             (FLASH_FFD13_X) 117.0E-09                 
 
-(FLASH_FFD13_Y) 116.1E-09             (FLASH_FFD14_X) 77.17E-09                 
+(FLASH_FFD13_Y) 176.0E-09             (FLASH_FFD14_X) 117.0E-09                 
 
-(FLASH_FFD14_Y) 116.1E-09             (FLASH_FFD15_X) 77.17E-09                 
+(FLASH_FFD14_Y) 176.0E-09             (FLASH_FFD15_X) 117.0E-09                 
 
-(FLASH_FFD15_Y) 116.1E-09             (FLASH_N011060) 14.20E-09                 
+(FLASH_FFD15_Y) 176.0E-09             (FLASH_N011060) 21.52E-09                 
 
-(FLASH_N011830) 14.20E-09             (FLASH_N012620) 14.20E-09                 
+(FLASH_N011830) 21.52E-09             (FLASH_N012620) 21.52E-09                 
 
-(FLASH_N013450) 14.20E-09             (FLASH_N093700) 14.20E-09                 
+(FLASH_N013450) 21.52E-09             (FLASH_N093700) 21.52E-09                 
 
-(FLASH_N094100) 14.20E-09             (FLASH_N094500) 14.20E-09                 
+(FLASH_N094100) 21.52E-09             (FLASH_N094500) 21.52E-09                 
 
-(FLASH_N094900) 14.20E-09             (LEADER_N04254) 2.000E-06                 
+(FLASH_N094900) 21.52E-09             (LEADER_N04254) 2.000E-06                 
 
-(FLASH_C1_N26867) 15.86E-06           (FLASH_C1_N27085) 15.86E-06               
+(FLASH_C1_N26867) 24.04E-06           (FLASH_C1_N27085) 24.04E-06               
 
-(FLASH_C1_N27149) 11.39E-06           (FLASH_C2_N26867) 15.86E-06               
+(FLASH_C1_N27149) 17.26E-06           (FLASH_C2_N26867) 24.04E-06               
 
-(FLASH_C2_N27085) 15.86E-06           (FLASH_C2_N27149) 11.39E-06               
+(FLASH_C2_N27085) 24.04E-06           (FLASH_C2_N27149) 17.26E-06               
 
-(FLASH_C3_N26867) 15.86E-06           (FLASH_C3_N27085) 15.86E-06               
+(FLASH_C3_N26867) 24.04E-06           (FLASH_C3_N27085) 24.04E-06               
 
-(FLASH_C3_N27149) 11.39E-06           (FLASH_C4_N26867) 15.86E-06               
+(FLASH_C3_N27149) 17.26E-06           (FLASH_C4_N26867) 24.04E-06               
 
-(FLASH_C4_N27085) 15.86E-06           (FLASH_C4_N27149) 11.39E-06               
+(FLASH_C4_N27085) 24.04E-06           (FLASH_C4_N27149) 17.26E-06               
 
-(FLASH_C5_N26867) 15.86E-06           (FLASH_C5_N27085) 15.86E-06               
+(FLASH_C5_N26867) 24.04E-06           (FLASH_C5_N27085) 24.04E-06               
 
-(FLASH_C5_N27149) 11.39E-06           (FLASH_C6_N26867) 15.86E-06               
+(FLASH_C5_N27149) 17.26E-06           (FLASH_C6_N26867) 24.04E-06               
 
-(FLASH_C6_N27085) 15.86E-06           (FLASH_C6_N27149) 11.39E-06               
+(FLASH_C6_N27085) 24.04E-06           (FLASH_C6_N27149) 17.26E-06               
 
-(FLASH_C7_N26867) 15.86E-06           (FLASH_C7_N27085) 15.86E-06               
+(FLASH_C7_N26867) 24.04E-06           (FLASH_C7_N27085) 24.04E-06               
 
-(FLASH_C7_N27149) 11.39E-06           (FLASH_C8_N26867) 15.86E-06               
+(FLASH_C7_N27149) 17.26E-06           (FLASH_C8_N26867) 24.03E-06               
 
-(FLASH_C8_N27085) 15.86E-06           (FLASH_C8_N27149) 11.39E-06               
+(FLASH_C8_N27085) 24.04E-06           (FLASH_C8_N27149) 17.26E-06               
 
-(FLASH_C9_N26867) 15.86E-06           (FLASH_C9_N27085) 15.86E-06               
+(FLASH_C9_N26867) 24.03E-06           (FLASH_C9_N27085) 24.04E-06               
 
-(FLASH_C9_N27149) 11.39E-06           (FLASH_C10_N26867) 15.86E-06              
+(FLASH_C9_N27149) 17.26E-06           (FLASH_C10_N26867) 24.03E-06              
 
-(FLASH_C10_N27085) 15.86E-06          (FLASH_C10_N27149) 11.39E-06              
+(FLASH_C10_N27085) 24.04E-06          (FLASH_C10_N27149) 17.26E-06              
 
-(FLASH_C11_N26867) 15.86E-06          (FLASH_C11_N27085) 15.86E-06              
+(FLASH_C11_N26867) 24.03E-06          (FLASH_C11_N27085) 24.04E-06              
 
-(FLASH_C11_N27149) 11.39E-06          (FLASH_C12_N26867) 15.86E-06              
+(FLASH_C11_N27149) 17.26E-06          (FLASH_C12_N26867) 24.03E-06              
 
-(FLASH_C12_N27085) 15.86E-06          (FLASH_C12_N27149) 11.39E-06              
+(FLASH_C12_N27085) 24.04E-06          (FLASH_C12_N27149) 17.26E-06              
 
-(FLASH_C13_N26867) 15.86E-06          (FLASH_C13_N27085) 15.86E-06              
+(FLASH_C13_N26867) 24.03E-06          (FLASH_C13_N27085) 24.04E-06              
 
-(FLASH_C13_N27149) 11.39E-06          (FLASH_C14_N26867) 15.86E-06              
+(FLASH_C13_N27149) 17.26E-06          (FLASH_C14_N26867) 24.03E-06              
 
-(FLASH_C14_N27085) 15.86E-06          (FLASH_C14_N27149) 11.39E-06              
+(FLASH_C14_N27085) 24.04E-06          (FLASH_C14_N27149) 17.26E-06              
 
-(FLASH_C15_N26867) 15.86E-06          (FLASH_C15_N27085) 15.86E-06              
+(FLASH_C15_N26867) 24.03E-06          (FLASH_C15_N27085) 24.04E-06              
 
-(FLASH_C15_N27149) 11.39E-06          (FLASH_U10_N00265) 152.1E-09              
+(FLASH_C15_N27149) 17.26E-06          (FLASH_U10_N00265) 230.6E-09              
 
-(FLASH_U10_N00277) 152.1E-09          (FLASH_U10_N00293) 152.1E-09              
+(FLASH_U10_N00277) 230.6E-09          (FLASH_U10_N00293) 230.6E-09              
 
-(FLASH_U10_N00317) 152.1E-09          (FLASH_U10_N00349) 152.1E-09              
+(FLASH_U10_N00317) 230.6E-09          (FLASH_U10_N00349) 230.6E-09              
 
-(FLASH_U10_N00389) 152.1E-09          (FLASH_U10_N00437) 152.1E-09              
+(FLASH_U10_N00389) 230.6E-09          (FLASH_U10_N00437) 230.6E-09              
 
-(FLASH_U10_N00653) 74.44E-09          (FLASH_U10_N05351) 74.44E-09              
+(FLASH_U10_N00653) 112.8E-09          (FLASH_U10_N05351) 112.8E-09              
 
-(FLASH_U10_N05416) 152.1E-09          (FLASH_U10_N05550) 152.1E-09              
+(FLASH_U10_N05416) 230.6E-09          (FLASH_U10_N05550) 230.6E-09              
 
-(FLASH_U10_N05692) 152.1E-09          (FLASH_U10_N05842) 152.1E-09              
+(FLASH_U10_N05692) 230.6E-09          (FLASH_U10_N05842) 230.6E-09              
 
-(FLASH_U10_N10574) 32.35E-06          (FLASH_U10_N21342) 74.44E-09              
+(FLASH_U10_N10574) 49.01E-06          (FLASH_U10_N21342) 112.8E-09              
 
-(FLASH_FFD1_N00589) 152.1E-09         (FLASH_FFD1_N00861) 152.1E-09             
+(FLASH_FFD1_N00589) 230.6E-09         (FLASH_FFD1_N00861) 230.6E-09             
 
-(FLASH_FFD2_N00589) 152.1E-09         (FLASH_FFD2_N00861) 152.1E-09             
+(FLASH_FFD2_N00589) 230.6E-09         (FLASH_FFD2_N00861) 230.6E-09             
 
-(FLASH_FFD3_N00589) 152.1E-09         (FLASH_FFD3_N00861) 152.1E-09             
+(FLASH_FFD3_N00589) 230.6E-09         (FLASH_FFD3_N00861) 230.6E-09             
 
-(FLASH_FFD4_N00589) 152.1E-09         (FLASH_FFD4_N00861) 152.1E-09             
+(FLASH_FFD4_N00589) 230.6E-09         (FLASH_FFD4_N00861) 230.6E-09             
 
-(FLASH_FFD5_N00589) 152.1E-09         (FLASH_FFD5_N00861) 152.1E-09             
+(FLASH_FFD5_N00589) 230.6E-09         (FLASH_FFD5_N00861) 230.6E-09             
 
-(FLASH_FFD6_N00589) 152.1E-09         (FLASH_FFD6_N00861) 152.1E-09             
+(FLASH_FFD6_N00589) 230.6E-09         (FLASH_FFD6_N00861) 230.6E-09             
 
-(FLASH_FFD7_N00589) 152.1E-09         (FLASH_FFD7_N00861) 152.1E-09             
+(FLASH_FFD7_N00589) 230.6E-09         (FLASH_FFD7_N00861) 230.6E-09             
 
-(FLASH_FFD8_N00589) 152.1E-09         (FLASH_FFD8_N00861) 152.1E-09             
+(FLASH_FFD8_N00589) 230.6E-09         (FLASH_FFD8_N00861) 230.6E-09             
 
-(FLASH_FFD9_N00589) 152.1E-09         (FLASH_FFD9_N00861) 152.1E-09             
+(FLASH_FFD9_N00589) 230.6E-09         (FLASH_FFD9_N00861) 230.6E-09             
 
-(FLASH_FFD10_N00589) 152.1E-09        (FLASH_FFD10_N00861) 152.1E-09            
+(FLASH_FFD10_N00589) 230.6E-09        (FLASH_FFD10_N00861) 230.6E-09            
 
-(FLASH_FFD11_N00589) 152.1E-09        (FLASH_FFD11_N00861) 152.1E-09            
+(FLASH_FFD11_N00589) 230.6E-09        (FLASH_FFD11_N00861) 230.6E-09            
 
-(FLASH_FFD12_N00589) 152.1E-09        (FLASH_FFD12_N00861) 152.1E-09            
+(FLASH_FFD12_N00589) 230.6E-09        (FLASH_FFD12_N00861) 230.6E-09            
 
-(FLASH_FFD13_N00589) 152.1E-09        (FLASH_FFD13_N00861) 152.1E-09            
+(FLASH_FFD13_N00589) 230.6E-09        (FLASH_FFD13_N00861) 230.6E-09            
 
-(FLASH_FFD14_N00589) 152.1E-09        (FLASH_FFD14_N00861) 152.1E-09            
+(FLASH_FFD14_N00589) 230.6E-09        (FLASH_FFD14_N00861) 230.6E-09            
 
-(FLASH_FFD15_N00589) 152.1E-09        (FLASH_FFD15_N00861) 152.1E-09            
+(FLASH_FFD15_N00589) 230.6E-09        (FLASH_FFD15_N00861) 230.6E-09            
 
-(FLASH_U10_NAND_N27813) 76.04E-09     (FLASH_FFD1_NAND_N00209) 76.06E-09        
+(FLASH_U10_NAND_N27813) 115.2E-09     (FLASH_FFD1_NAND_N00209) 115.3E-09        
 
-(FLASH_FFD2_NAND_N00209) 76.06E-09    (FLASH_FFD3_NAND_N00209) 76.06E-09        
+(FLASH_FFD2_NAND_N00209) 115.3E-09    (FLASH_FFD3_NAND_N00209) 115.3E-09        
 
-(FLASH_FFD4_NAND_N00209) 76.06E-09    (FLASH_FFD5_NAND_N00209) 76.06E-09        
+(FLASH_FFD4_NAND_N00209) 115.3E-09    (FLASH_FFD5_NAND_N00209) 115.3E-09        
 
-(FLASH_FFD6_NAND_N00209) 76.06E-09    (FLASH_FFD7_NAND_N00209) 76.06E-09        
+(FLASH_FFD6_NAND_N00209) 115.3E-09    (FLASH_FFD7_NAND_N00209) 115.3E-09        
 
-(FLASH_FFD8_NAND_N00209) 76.06E-09    (FLASH_FFD9_NAND_N00209) 76.06E-09        
+(FLASH_FFD8_NAND_N00209) 115.3E-09    (FLASH_FFD9_NAND_N00209) 115.3E-09        
 
-(FLASH_U10_NAND1_N27813) 76.04E-09    (FLASH_U10_NAND2_N27813) 76.04E-09        
+(FLASH_U10_NAND1_N27813) 115.2E-09    (FLASH_U10_NAND2_N27813) 115.2E-09        
 
-(FLASH_U10_NAND3_N27813) 76.04E-09    (FLASH_U10_NAND4_N27813) 76.04E-09        
+(FLASH_U10_NAND3_N27813) 115.2E-09    (FLASH_U10_NAND4_N27813) 115.2E-09        
 
-(FLASH_U10_NAND5_N27813) 76.04E-09    (FLASH_U10_NAND6_N27813) 76.04E-09        
+(FLASH_U10_NAND5_N27813) 115.2E-09    (FLASH_U10_NAND6_N27813) 115.2E-09        
 
-(FLASH_U10_NAND7_N27813) 76.04E-09    (FLASH_U10_NAND8_N27813) 76.04E-09        
+(FLASH_U10_NAND7_N27813) 115.2E-09    (FLASH_U10_NAND8_N27813) 115.2E-09        
 
-(FLASH_U10_NAND9_N27813) 76.04E-09    (FLASH_FFD10_NAND_N00209) 76.06E-09       
+(FLASH_U10_NAND9_N27813) 115.2E-09    (FLASH_FFD10_NAND_N00209) 115.3E-09       
 
-(FLASH_FFD11_NAND_N00209) 76.06E-09   (FLASH_FFD12_NAND_N00209) 76.06E-09       
+(FLASH_FFD11_NAND_N00209) 115.3E-09   (FLASH_FFD12_NAND_N00209) 115.3E-09       
 
-(FLASH_FFD13_NAND_N00209) 76.06E-09   (FLASH_FFD14_NAND_N00209) 76.06E-09       
+(FLASH_FFD13_NAND_N00209) 115.3E-09   (FLASH_FFD14_NAND_N00209) 115.3E-09       
 
-(FLASH_FFD15_NAND_N00209) 76.06E-09   (FLASH_FFD1_NAND1_N00209) 76.06E-09       
+(FLASH_FFD15_NAND_N00209) 115.3E-09   (FLASH_FFD1_NAND1_N00209) 115.3E-09       
 
-(FLASH_FFD1_NAND2_N00209) 38.59E-09   (FLASH_FFD1_NAND3_N00209) 38.59E-09       
+(FLASH_FFD1_NAND2_N00209) 58.48E-09   (FLASH_FFD1_NAND3_N00209) 58.48E-09       
 
-(FLASH_FFD1_NAND4_N00209) 7.100E-09   (FLASH_FFD2_NAND1_N00209) 76.06E-09       
+(FLASH_FFD1_NAND4_N00209) 10.76E-09   (FLASH_FFD2_NAND1_N00209) 115.3E-09       
 
-(FLASH_FFD2_NAND2_N00209) 38.59E-09   (FLASH_FFD2_NAND3_N00209) 38.59E-09       
+(FLASH_FFD2_NAND2_N00209) 58.48E-09   (FLASH_FFD2_NAND3_N00209) 58.48E-09       
 
-(FLASH_FFD2_NAND4_N00209) 38.59E-09   (FLASH_FFD3_NAND1_N00209) 76.06E-09       
+(FLASH_FFD2_NAND4_N00209) 58.48E-09   (FLASH_FFD3_NAND1_N00209) 115.3E-09       
 
-(FLASH_FFD3_NAND2_N00209) 38.59E-09   (FLASH_FFD3_NAND3_N00209) 38.59E-09       
+(FLASH_FFD3_NAND2_N00209) 58.48E-09   (FLASH_FFD3_NAND3_N00209) 58.48E-09       
 
-(FLASH_FFD3_NAND4_N00209) 7.100E-09   (FLASH_FFD4_NAND1_N00209) 76.06E-09       
+(FLASH_FFD3_NAND4_N00209) 10.76E-09   (FLASH_FFD4_NAND1_N00209) 115.3E-09       
 
-(FLASH_FFD4_NAND2_N00209) 38.59E-09   (FLASH_FFD4_NAND3_N00209) 38.59E-09       
+(FLASH_FFD4_NAND2_N00209) 58.48E-09   (FLASH_FFD4_NAND3_N00209) 58.48E-09       
 
-(FLASH_FFD4_NAND4_N00209) 25.85E-09   (FLASH_FFD5_NAND1_N00209) 76.06E-09       
+(FLASH_FFD4_NAND4_N00209) 39.18E-09   (FLASH_FFD5_NAND1_N00209) 115.3E-09       
 
-(FLASH_FFD5_NAND2_N00209) 38.59E-09   (FLASH_FFD5_NAND3_N00209) 38.59E-09       
+(FLASH_FFD5_NAND2_N00209) 58.48E-09   (FLASH_FFD5_NAND3_N00209) 58.48E-09       
 
-(FLASH_FFD5_NAND4_N00209) 7.100E-09   (FLASH_FFD6_NAND1_N00209) 76.06E-09       
+(FLASH_FFD5_NAND4_N00209) 10.76E-09   (FLASH_FFD6_NAND1_N00209) 115.3E-09       
 
-(FLASH_FFD6_NAND2_N00209) 38.59E-09   (FLASH_FFD6_NAND3_N00209) 38.59E-09       
+(FLASH_FFD6_NAND2_N00209) 58.48E-09   (FLASH_FFD6_NAND3_N00209) 58.48E-09       
 
-(FLASH_FFD6_NAND4_N00209) 38.59E-09   (FLASH_FFD7_NAND1_N00209) 76.05E-09       
+(FLASH_FFD6_NAND4_N00209) 58.48E-09   (FLASH_FFD7_NAND1_N00209) 115.3E-09       
 
-(FLASH_FFD7_NAND2_N00209) 38.59E-09   (FLASH_FFD7_NAND3_N00209) 38.59E-09       
+(FLASH_FFD7_NAND2_N00209) 58.48E-09   (FLASH_FFD7_NAND3_N00209) 58.48E-09       
 
-(FLASH_FFD7_NAND4_N00209) 7.100E-09   (FLASH_FFD8_NAND1_N00209) 76.06E-09       
+(FLASH_FFD7_NAND4_N00209) 10.76E-09   (FLASH_FFD8_NAND1_N00209) 115.3E-09       
 
-(FLASH_FFD8_NAND2_N00209) 38.59E-09   (FLASH_FFD8_NAND3_N00209) 16.17E-06       
+(FLASH_FFD8_NAND2_N00209) 58.48E-09   (FLASH_FFD8_NAND3_N00209) 24.50E-06       
 
-(FLASH_FFD8_NAND4_N00209) 19.43E-09   (FLASH_FFD9_NAND1_N00209) 76.06E-09       
+(FLASH_FFD8_NAND4_N00209) 29.45E-09   (FLASH_FFD9_NAND1_N00209) 115.3E-09       
 
-(FLASH_FFD9_NAND2_N00209) 38.59E-09   (FLASH_FFD9_NAND3_N00209) 38.59E-09       
+(FLASH_FFD9_NAND2_N00209) 58.48E-09   (FLASH_FFD9_NAND3_N00209) 58.48E-09       
 
-(FLASH_FFD9_NAND4_N00209) 7.100E-09   (FLASH_U10_NAND-4_N35641) 24.73E-06       
+(FLASH_FFD9_NAND4_N00209) 10.76E-09   (FLASH_U10_NAND-4_N35641) 37.46E-06       
 
-(FLASH_U10_NAND-4_N35937) 16.47E-06   (FLASH_U10_NAND-4_N35977) 8.234E-06       
+(FLASH_U10_NAND-4_N35937) 24.96E-06   (FLASH_U10_NAND-4_N35977) 12.47E-06       
 
-(FLASH_U10_NAND-8_N53250)    4.2932   (FLASH_U10_NAND-8_N53536)    2.7399       
+(FLASH_U10_NAND-8_N53250)  -12.7860   (FLASH_U10_NAND-8_N53536)    -.3068       
 
-(FLASH_U10_NAND-8_N53542)    1.6299   (FLASH_U10_NAND-8_N53888)   14.1900       
+(FLASH_U10_NAND-8_N53542)     .2706   (FLASH_U10_NAND-8_N53888)    5.3502       
 
-(FLASH_U10_NAND-8_N54114)   13.5840   (FLASH_U10_NAND-8_N54154)    6.2546       
+(FLASH_U10_NAND-8_N54114)    3.6006   (FLASH_U10_NAND-8_N54154)    3.0112       
 
-(FLASH_U10_NAND-8_N56639)    1.0458   (FLASH_U10_NAND10_N27813) 76.04E-09       
+(FLASH_U10_NAND-8_N56639)    1.3149   (FLASH_U10_NAND10_N27813) 115.2E-09       
 
-(FLASH_U10_NAND11_N27813) 16.49E-06   (FLASH_FFD10_NAND1_N00209) 76.06E-09      
+(FLASH_U10_NAND11_N27813) 24.98E-06   (FLASH_FFD10_NAND1_N00209) 115.3E-09      
 
-(FLASH_FFD10_NAND2_N00209) 38.59E-09  (FLASH_FFD10_NAND3_N00209) 38.59E-09      
+(FLASH_FFD10_NAND2_N00209) 58.48E-09  (FLASH_FFD10_NAND3_N00209) 58.48E-09      
 
-(FLASH_FFD10_NAND4_N00209) 38.59E-09  (FLASH_FFD11_NAND1_N00209) 76.06E-09      
+(FLASH_FFD10_NAND4_N00209) 58.48E-09  (FLASH_FFD11_NAND1_N00209) 115.3E-09      
 
-(FLASH_FFD11_NAND2_N00209) 38.59E-09  (FLASH_FFD11_NAND3_N00209) 38.59E-09      
+(FLASH_FFD11_NAND2_N00209) 58.48E-09  (FLASH_FFD11_NAND3_N00209) 58.48E-09      
 
-(FLASH_FFD11_NAND4_N00209) 7.100E-09  (FLASH_FFD12_NAND1_N00209) 76.06E-09      
+(FLASH_FFD11_NAND4_N00209) 10.76E-09  (FLASH_FFD12_NAND1_N00209) 115.3E-09      
 
-(FLASH_FFD12_NAND2_N00209) 38.59E-09  (FLASH_FFD12_NAND3_N00209) 38.59E-09      
+(FLASH_FFD12_NAND2_N00209) 58.48E-09  (FLASH_FFD12_NAND3_N00209) 58.48E-09      
 
-(FLASH_FFD12_NAND4_N00209) 25.85E-09  (FLASH_FFD13_NAND1_N00209) 76.06E-09      
+(FLASH_FFD12_NAND4_N00209) 39.18E-09  (FLASH_FFD13_NAND1_N00209) 115.3E-09      
 
-(FLASH_FFD13_NAND2_N00209) 38.59E-09  (FLASH_FFD13_NAND3_N00209) 38.59E-09      
+(FLASH_FFD13_NAND2_N00209) 58.48E-09  (FLASH_FFD13_NAND3_N00209) 58.48E-09      
 
-(FLASH_FFD13_NAND4_N00209) 7.100E-09  (FLASH_FFD14_NAND1_N00209) 76.06E-09      
+(FLASH_FFD13_NAND4_N00209) 10.76E-09  (FLASH_FFD14_NAND1_N00209) 115.3E-09      
 
-(FLASH_FFD14_NAND2_N00209) 38.59E-09  (FLASH_FFD14_NAND3_N00209) 38.59E-09      
+(FLASH_FFD14_NAND2_N00209) 58.48E-09  (FLASH_FFD14_NAND3_N00209) 58.48E-09      
 
-(FLASH_FFD14_NAND4_N00209) 38.59E-09  (FLASH_FFD15_NAND1_N00209) 76.06E-09      
+(FLASH_FFD14_NAND4_N00209) 58.48E-09  (FLASH_FFD15_NAND1_N00209) 115.3E-09      
 
-(FLASH_FFD15_NAND2_N00209) 38.59E-09  (FLASH_FFD15_NAND3_N00209) 38.59E-09      
+(FLASH_FFD15_NAND2_N00209) 58.48E-09  (FLASH_FFD15_NAND3_N00209) 58.48E-09      
 
-(FLASH_FFD15_NAND4_N00209) 7.100E-09  (FLASH_FFD1_NAND-3_N05674) 77.40E-09      
+(FLASH_FFD15_NAND4_N00209) 10.76E-09  (FLASH_FFD1_NAND-3_N05674) 117.3E-09      
 
-(FLASH_FFD1_NAND-3_N05700) 38.70E-09  (FLASH_FFD2_NAND-3_N05674) 77.40E-09      
+(FLASH_FFD1_NAND-3_N05700) 58.65E-09  (FLASH_FFD2_NAND-3_N05674) 117.3E-09      
 
-(FLASH_FFD2_NAND-3_N05700) 38.70E-09  (FLASH_FFD3_NAND-3_N05674) 77.40E-09      
+(FLASH_FFD2_NAND-3_N05700) 58.65E-09  (FLASH_FFD3_NAND-3_N05674) 117.3E-09      
 
-(FLASH_FFD3_NAND-3_N05700) 38.70E-09  (FLASH_FFD4_NAND-3_N05674) 77.40E-09      
+(FLASH_FFD3_NAND-3_N05700) 58.65E-09  (FLASH_FFD4_NAND-3_N05674) 117.3E-09      
 
-(FLASH_FFD4_NAND-3_N05700) 38.70E-09  (FLASH_FFD5_NAND-3_N05674) 77.40E-09      
+(FLASH_FFD4_NAND-3_N05700) 58.65E-09  (FLASH_FFD5_NAND-3_N05674) 117.3E-09      
 
-(FLASH_FFD5_NAND-3_N05700) 38.70E-09  (FLASH_FFD6_NAND-3_N05674) 77.40E-09      
+(FLASH_FFD5_NAND-3_N05700) 58.65E-09  (FLASH_FFD6_NAND-3_N05674) 117.3E-09      
 
-(FLASH_FFD6_NAND-3_N05700) 38.70E-09  (FLASH_FFD7_NAND-3_N05674) 77.40E-09      
+(FLASH_FFD6_NAND-3_N05700) 58.65E-09  (FLASH_FFD7_NAND-3_N05674) 117.3E-09      
 
-(FLASH_FFD7_NAND-3_N05700) 38.70E-09  (FLASH_FFD8_NAND-3_N05674) 77.40E-09      
+(FLASH_FFD7_NAND-3_N05700) 58.65E-09  (FLASH_FFD8_NAND-3_N05674) 117.3E-09      
 
-(FLASH_FFD8_NAND-3_N05700) 38.70E-09  (FLASH_FFD9_NAND-3_N05674) 77.40E-09      
+(FLASH_FFD8_NAND-3_N05700) 58.65E-09  (FLASH_FFD9_NAND-3_N05674) 117.3E-09      
 
-(FLASH_FFD9_NAND-3_N05700) 38.70E-09  (FLASH_FFD10_NAND-3_N05674) 77.40E-09     
+(FLASH_FFD9_NAND-3_N05700) 58.65E-09  (FLASH_FFD10_NAND-3_N05674) 117.3E-09     
 
-(FLASH_FFD10_NAND-3_N05700) 38.70E-09 (FLASH_FFD11_NAND-3_N05674) 77.40E-09     
+(FLASH_FFD10_NAND-3_N05700) 58.65E-09 (FLASH_FFD11_NAND-3_N05674) 117.3E-09     
 
-(FLASH_FFD11_NAND-3_N05700) 38.70E-09 (FLASH_FFD12_NAND-3_N05674) 77.40E-09     
+(FLASH_FFD11_NAND-3_N05700) 58.65E-09 (FLASH_FFD12_NAND-3_N05674) 117.3E-09     
 
-(FLASH_FFD12_NAND-3_N05700) 38.70E-09 (FLASH_FFD13_NAND-3_N05674) 77.40E-09     
+(FLASH_FFD12_NAND-3_N05700) 58.65E-09 (FLASH_FFD13_NAND-3_N05674) 117.3E-09     
 
-(FLASH_FFD13_NAND-3_N05700) 38.70E-09 (FLASH_FFD14_NAND-3_N05674) 77.40E-09     
+(FLASH_FFD13_NAND-3_N05700) 58.65E-09 (FLASH_FFD14_NAND-3_N05674) 117.3E-09     
 
-(FLASH_FFD14_NAND-3_N05700) 38.70E-09 (FLASH_FFD15_NAND-3_N05674) 77.40E-09     
+(FLASH_FFD14_NAND-3_N05700) 58.65E-09 (FLASH_FFD15_NAND-3_N05674) 117.3E-09     
 
-(FLASH_FFD15_NAND-3_N05700) 38.70E-09 
+(FLASH_FFD15_NAND-3_N05700) 58.65E-09 
 
 
   These voltages failed to converge:
 
-    V(LSB)                    =  -270.11uV  \    -13.97V
-    V(FLASH_U10_NAND-8_N53888) =    -11.55V  \     14.19V
-    V(FLASH_U10_NAND-8_N53542) =   -10.16mV  \     1.630V
-    V(FLASH_U10_NAND-8_N56639) =    -1.030V  \     1.046V
-    V(FLASH_U10_NAND-8_N54114) =    -11.55V  \     13.58V
-    V(FLASH_U10_NAND-8_N54154) =   -119.38V  \     6.255V
-    V(FLASH_U10_NAND-8_N53250) =   -10.00mV  \     4.293V
-    V(FLASH_U10_NAND-8_N53536) =   -10.00mV  \     2.740V
+    V(LSB)                    =    -18.20V  \    -37.56V
+    V(FLASH_U10_NAND-8_N53888) =    -11.24V  \     5.350V
+    V(FLASH_U10_NAND-8_N53542) =    -1.480V  \   270.55mV
+    V(FLASH_U10_NAND-8_N56639) =    -1.216V  \     1.315V
+    V(FLASH_U10_NAND-8_N54114) =    -10.90V  \     3.601V
+    V(FLASH_U10_NAND-8_N54154) =    -10.58V  \     3.011V
+    V(FLASH_U10_NAND-8_N53250) =    -7.271V  \    -12.79V
+    V(FLASH_U10_NAND-8_N53536) =    -1.719V  \  -306.75mV
 
   These supply currents failed to converge:
 
-    I(V_VDD)                  =   247.76pA  \  -139.67uA
+    I(V_VDD)                  =    1.753mA  \  -380.15uA
 
   These devices failed to converge:
     M_FLASH_U10_NAND-8_M1 M_FLASH_U10_NAND-8_M14 M_FLASH_U10_NAND-8_M6 
     M_FLASH_U10_NAND-8_M8 M_FLASH_U10_NAND-8_M16 M_FLASH_U10_NAND-8_M2 
     M_FLASH_U10_NAND-8_M3 M_FLASH_U10_NAND-8_M15 M_FLASH_U10_NAND-8_M4 
     M_FLASH_U10_NAND-8_M11 M_FLASH_U10_NAND-8_M7 M_FLASH_U10_NAND-8_M9 
-    M_FLASH_U10_NAND-8_M12 M_FLASH_U10_NAND-8_M5 M_FLASH_U10_NAND-8_M13 
+    M_FLASH_U10_NAND-8_M12 M_FLASH_U10_NAND-8_M5 M_FLASH_U10_NAND-8_M10 
+    M_FLASH_U10_NAND-8_M13 
 
 **** Interrupt ****
